
[package]
name = "wasm-rust-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stuff.workspace = true
stuff_derive.workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
stuff = { path = "crates/stuff"  }
stuff_derive = { path = "crates/stuff_derive" }

